# industrial-pollution-intelligence

./: .gitignore  DEPLOYMENT_SUMMARY.md  GITHUB_DEPLOYMENT.md  LICENSE  README.md  REAL_GEOJSON_INTEGRATION_STATUS.md  SYSTEM_STATUS.md  deploy.sh  docker-compose.yml  env.example  logs.sh  quick-start.sh  stop.sh  upload-to-github.sh
analysis/: main_analysis.ipynb
frontend/: Dockerfile  index.html  package.json  tailwind.config.js  test-collection.html  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx
migrations/: 001_initial_schema.sql  001_initial_schema_simple.sql
python/: accurate_china_map.py  advanced_ml_models.py  auto_data_collector.py  auto_data_scheduler.py  china_choropleth_map.py  china_map_visualization.py  complex_china_map.py  correct_cnemc_collector.py  enhanced_cnemc_collector.py  enhanced_ml_forecasting.py  pyproject.toml  real_china_map.py  real_cnemc_collector.py  realistic_china_map.py  run_analysis.py  run_data_collection.py  run_forecasting.py  simple_data_collection.py  simple_enhanced_forecasting.py  simulate_realistic_data.py  test_cnemc_api.py  test_data_collection.py  update_database_schema.py  use_real_geojson_map.py
python/lifecycle/: product_trace.py
python/ml/analysis/: __init__.py  pca_analysis.py
python/ml/causal/: granger_causality.py
python/ml/forecasting/: __init__.py  lstm_model.py  prophet_model.py
python/processing/: etl_pipeline.py
python/scraper/: cnemc_collector.py
reports/: comprehensive_project_report.md  conclusions.md
rust-backend/: Cargo.toml  Dockerfile
rust-backend/src/: main.rs
rust-backend/src/api/: analysis.rs  data_collection.rs  enhanced_data_collection.rs  forecast.rs  lifecycle.rs  map.rs  mod.rs  pollution.rs
rust-backend/src/db/: pool.rs
rust-backend/src/ml_bridge/: mod.rs
rust-backend/src/models/: mod.rs  prediction.rs  water_quality.rs
scripts/: remove_comments.py
(+16 files in other folders)
